Đức đẹp trai ỏ ỏ

--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Le Nang Hoang Duc</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="profile-card">
-    <div class="card-header">
-      <div class="pic">
-        <img src="pic.png" alt="">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Welcome</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/I57J65D.jpg"/>
+  </head>
+  <body>
+    
+    <div class="card">
+      <div class="card-image">
+        <img src="./images/background.jpg" alt="">
       </div>
-      <div class="name">Le Nang Hoang Duc (DucFukBoiz) </div>
-      <div class="desc">Freelance Designer</div>
-      <div class="sm">
-        <a href="https://www.facebook.com/Mark.Zuckerberg2405" target="_blank" class="fab fa-facebook"></a>
-        <a href="https://github.com/ducfukboiz" target="_blank" class="fab fa-github"></a>
-        <a href="ducfukboiz2405@gmail.com" target="_blank" class="fab fa-google"></a>
-    </div>
-      <a href="#" class="contact-btn">Contact To Me</a>
-    </div>
-        </div>
+      <div class="profile-image">
+        <img src="./images/profile.jpg" alt="">
       </div>
+      <div class="card-content">
+        <h3>N.Dvck</h3>
+        <p>📩 Contact: ndvckbakanya.contact@gmail.com</p>
+      </div>
+      <div class="icons">
+        <a href="https://facebook.com/hirius.2nd" target="_blank" class="fab fa-facebook-f"></a>
+        <a href="https://www.instagram.com/zavia.zx/" target="_blank" class="fab fa-instagram"></a>
+         </div>
     </div>
-  </div>
-</body>
+    <div class="footer">
+         <a href="https://www.facebook.com/Mark.Zuckerberg2405/" target="_blank">&copy LeNangHoangDuc</a>
+    </div>
+  </body>
+<audio src="./audio/onthefloor.mp3" autoplay></audio>
 </html>
