--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>📩 Contact: ndvckbakanya.contact@gmail.com</p>
       </div>
       <div class="icons">
-        <a href="https://facebook.com/hirius.2nd" target="_blank" class="fab fa-facebook-f"></a>
-        <a href="https://www.instagram.com/zavia.zx/" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://www.facebook.com/Mark.Zuckerberg2405" target="_blank" class="fab fa-facebook-f"></a>
+        <a href="https://www.instagram.com/hoangduc_handsome_07/" target="_blank" class="fab fa-instagram"></a>
          </div>
     </div>
     <div class="footer">
