--- a/index.html
+++ b/index.html
@@ -24,10 +24,27 @@
         <a href="https://www.facebook.com/Mark.Zuckerberg2405" target="_blank" class="fab fa-facebook-f"></a>
         <a href="https://www.instagram.com/hoangduc_handsome_07/" target="_blank" class="fab fa-instagram"></a>
          </div>
-    </div>
-    <audio src="./audio/onthefloor.mp3" autoplay></audio>
-      </div>
-    <div class="footer">
-         <a href="https://www.facebook.com/Mark.Zuckerberg2405/" target="_blank">&copy LeNangHoangDuc</a>
-    </div>
-</html>
+    <div style="display:none">
+            <audio id="audio" src="https://cdn.glitch.me/509aaa3a-8801-4b16-921f-62dea1ba130d%2Fyt5s.com%20-%20KANA-BOON%20-%20Silhouette%20x%20Naruto%20Shippuden%20Opening%2016%20_%20but%20it's%20lofi%20hip%20hop%20cover%20(128%20kbps).mp3?v=1636897359949" controls="controls" autoplay></audio>
+        </div>
+        <script> 
+            document.addEventListener('keydown', function (event) {
+                if (event.keyCode === 13) {
+                    play();
+                }
+            })
+            document.addEventListener('mousemove', play)
+            document.addEventListener('mouseup', play)
+            document.addEventListener('mousedown', play)
+            document.addEventListener('click', play)
+            function play() {
+                document.getElementById('audio').play();
+            }
+        </script>
+    </style>
+</script>
+</script>
+<p style="text-align:center;">
+copyright © 2021 Le Nang Hoang Duc(web make by me).<br>All rights reserved.
+</p>
+</php>
