--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="https://www.instagram.com/hoangduc_handsome_07/" target="_blank" class="fab fa-instagram"></a>
          </div>
     <div style="display:none">
-            <audio id="audio" src="https://cdn.glitch.me/509aaa3a-8801-4b16-921f-62dea1ba130d%2Fyt5s.com%20-%20KANA-BOON%20-%20Silhouette%20x%20Naruto%20Shippuden%20Opening%2016%20_%20but%20it's%20lofi%20hip%20hop%20cover%20(128%20kbps).mp3?v=1636897359949" controls="controls" autoplay></audio>
+            <audio id="audio" src="https://cdn.glitch.global/42608219-229e-43fe-9255-60d1488b3ad5/yt5s.com%20-%20Super%20Idol%20(lyrics%2Bvietsub)(%20Japanese%20lofi%20Ver)%20_%20JW%20MUSIC%20(128%20kbps).mp3?v=1641809614208" controls="controls" autoplay></audio>
         </div>
         <script> 
             document.addEventListener('keydown', function (event) {
@@ -45,6 +45,7 @@
 </script>
 </script>
 <p style="text-align:center;">
-copyright © 2021 Le Nang Hoang Duc(web make by me).<br>All rights reserved.
+copyright © 2021 Le Nang Hoang Duc.
+<br>All rights reserved.
 </p>
 </php>
